--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
-    "swiper": "^9.2.0",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
